// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Variable Fix Layout Group > test get Covers 1`] = `
Map {
  "start_0" => [
    "node_0",
    "node_1",
    "end_0",
  ],
  "node_0" => [
    "node_1",
    "end_0",
  ],
  "node_1" => [
    "end_0",
  ],
  "end_0" => [],
}
`;

exports[`Variable Fix Layout Group > test get Covers After Init Private 1`] = `
Map {
  "start_0" => [
    "node_0",
    "node_0_private",
    "node_1",
    "node_1_private",
    "end_0",
    "end_0_private",
  ],
  "node_0" => [
    "node_1",
    "node_1_private",
    "end_0",
    "end_0_private",
  ],
  "node_1" => [
    "end_0",
    "end_0_private",
  ],
  "end_0" => [],
}
`;

exports[`Variable Fix Layout Group > test get Deps 1`] = `
Map {
  "start_0" => [],
  "node_0" => [
    "start_0",
  ],
  "node_1" => [
    "start_0",
    "node_0",
  ],
  "end_0" => [
    "start_0",
    "node_0",
    "node_1",
  ],
}
`;

exports[`Variable Fix Layout Group > test get Deps After Init Private 1`] = `
Map {
  "start_0" => [
    "start_0_private",
  ],
  "node_0" => [
    "start_0",
    "node_0_private",
  ],
  "node_1" => [
    "start_0",
    "node_0",
    "node_1_private",
  ],
  "end_0" => [
    "start_0",
    "node_0",
    "node_1",
    "end_0_private",
  ],
}
`;

exports[`Variable Fix Layout Group > test get private scope Covers 1`] = `
Map {
  "start_0_private" => [
    "start_0",
  ],
  "node_0_private" => [
    "node_0",
  ],
  "node_1_private" => [
    "node_1",
  ],
  "end_0_private" => [
    "end_0",
  ],
}
`;

exports[`Variable Fix Layout Group > test get private scope Deps 1`] = `
Map {
  "start_0_private" => [],
  "node_0_private" => [
    "start_0",
  ],
  "node_1_private" => [
    "start_0",
    "node_0",
  ],
  "end_0_private" => [
    "start_0",
    "node_0",
    "node_1",
  ],
}
`;

exports[`Variable Fix Layout Group > test sort 1`] = `
[
  "start_0_private",
  "start_0",
  "node_0",
  "node_0_private",
  "node_1",
  "node_1_private",
  "end_0",
  "end_0_private",
  "testScope",
  "$group_test$",
]
`;
